logs/pype32.log
Listing '.'...
Listing './bin'...
Compiling './bin/readpe.py'...
***   File "./bin/readpe.py", line 47
    print "[+] IMAGE_DOS_HEADER values:\n"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pype32'...
Compiling './lib/python3.5/site-packages/pype32/baseclasses.py'...
***   File "./lib/python3.5/site-packages/pype32/baseclasses.py", line 171
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pype32/consts.py'...
***   File "./lib/python3.5/site-packages/pype32/consts.py", line 110
    IMAGE_ORDINAL_FLAG = 0x80000000L
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pype32/pype32.py'...
***   File "./lib/python3.5/site-packages/pype32/pype32.py", line 184
    print excep.PEWarning("Suspicious value for NumberOfRvaAndSizes: %d." % self.ntHeaders.optionaHeader.numberOfRvaAndSizes.value)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pype32/utils.py'...
***   File "./lib/python3.5/site-packages/pype32/utils.py", line 298
    print "Warning: Trying to read: %d bytes - only %d bytes left" % (nroBytes,  self.length - self.offset)
                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pype32-0.1a5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
